Fix typo in project name and files structure

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = scrapper.settings
+default = scraper.settings
 
 [deploy]
 #url = http://localhost:6801/
-project = airbnb-scrapper
+project = airbnb-scraper
